--- a/index.html
+++ b/index.html
@@ -461,23 +461,23 @@
    <h2 class="title text-center text-uppercase">
     join us
   </h2>
-  <div class="join-us">
-    <div class="box">
+  <div class="join-us ">
+    <div class="box mb-4 col-10 mx-auto col-md-5 col-lg-3 p-1">
       <h3>Subscribe Now</h3>
       <img src="imeg/insta.jpg" alt="">
       <p>Go To Link</p>
     </div>
-    <div class="box">
+    <div class="box mb-4 col-10 mx-auto col-md-5 col-lg-3 p-1">
       <h3>Follow</h3>
       <img src="imeg/whats.jpg" alt="">
       <p>Go To Link</p>
     </div>
-    <div class="box">
+    <div class="box mb-4 col-10 mx-auto col-md-5 col-lg-3 p-1">
       <h3>Like the page</h3>
       <img src="imeg/twetter.jpg" alt="">
       <p>Go To Link</p>
     </div>
-    <div class="box">
+    <div class="box mb-4 col-10 mx-auto col-md-5 col-lg-3 p-1">
       <h3>watch vedios</h3>
       <img src="imeg/in.jpg" alt="">
       <p>Go To Link</p>
@@ -520,7 +520,7 @@
        <p>Fax : 000-000-000</p>
      </div>
     </div>
-    <h4 style="text-align: center; margin: 0PX; padding: 10PX;">COPYRIGHT © 2023 MUSTAFA AYMAN BRJAS. ALL RIGHTS</h4>
+    <h4 style=" text-align: center; margin: 0PX; padding: 10PX; " class="w-50 mx-auto">COPYRIGHT © 2023 MUSTAFA AYMAN BRJAS. ALL RIGHTS</h4>
    </div>
 
 
